# NativeInstrumentation

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle.yml  test.yml
gradle/wrapper/: gradle-wrapper.properties
native-instrumentation-native/: .gitignore  CMakeLists.txt  build.gradle.kts  lib.cpp  type_convert.cpp  type_convert.h
src/main/java/me/fan87/nativeinstrumentation/: NativeInstrumentation.java  OsDetector.java  TransformerManager.java
src/test/java/me/fan87/nativeinstrumentation/: GetSetFieldTest.java  InvokeMethodTest.java  TransformTest.java
src/test/java/me/fan87/nativeinstrumentation/testclasses/: EmptyClass_DoNotLoad_1.java  EmptyClass_DoNotLoad_2.java  EmptyClass_DoNotLoad_3.java  SimpleStringReturn.java  SimpleStringReturn2.java  SimpleStringReturn_DoNotLoad.java
